# StORM

./: .envrc  .gitignore  Cargo.toml  README.md  bacon.toml  default.nix  flake.nix  package.nix  plot.py  shell.nix  stretched-string.jl  test.hdf5
.cargo/: config.toml
.github/workflows/: all.yaml  hugo.yaml
benches/: instruction-count.rs  wall-clock.rs
docs/: .gitignore  go.mod  go.sum  hugo.toml
docs/_vendor/: modules.txt
docs/_vendor/github.com/colinwilson/lotusdocs/assets/docs/scss/custom/components/: _alerts.scss
docs/_vendor/github.com/colinwilson/lotusdocs/assets/docs/scss/custom/structure/: _content.scss
docs/_vendor/github.com/colinwilson/lotusdocs/layouts/partials/docs/: head.html  sidebar.html
docs/content/: _index.md  faq.md  features.md  installation.md  reference.md  rotation.md  walkthrough.md
docs/landing/: index.html  style.css
docs/layouts/_default/_markup/: render-passthrough.html
maxima/: colloc6.wxmx  colloc8.wxmx  lee-baraffe.mac  oscillation-equations.mac
nix/: cargo-export.nix  iai-callgrind.nix  package.nix  pins.nix
scripts/: benches  eigenfunctions.py  generate-batch-input-deformed.py  inspect-balanced.py  inspect-brent.py  integrals.py  legendre.py  magnus.mac  oscillation-equations.mac  oscillation_equations.py  plot-benches.py  plot-deformation.py  plot-gyre-benches.py  plot.py  tensor.mac  test_airy.py  windings.py
scripts/plotting/: asymmetries.py  perturbations.py  polar.py  storm-zams-structure.py  top-zams-structure.py
src/: bracket.rs  dynamic_interface.rs  gaunt.rs  helpers.rs  jacobian.rs  lib.rs  linalg.rs  main.rs  model.rs  perturbed.rs  postprocessing.rs  solver.rs  stepper.rs  system.rs
src/linalg/: qz.rs  storage.rs
src/model/: gsm.rs  interpolate.rs  polytrope.rs
src/system/: adiabatic.rs  discretized.rs  filler.rs  stretched_string.rs
test-data/: gyre-inlist-template  joel-test-model.GSM  test-model-tams.GSM  test-model-zams.GSM  top-zams-model.GSM
