cargo-features = ["profile-rustflags"]

[package]
name = "storm"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.native]
inherits = "release"

[profile.release-cleaned]
inherits = "release"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
color-eyre = "0.6.2"
ndarray = { version = "0.15.6", default-features = false }
num = "0.4.1"
clap = { version = "4.4.14", features = ["derive"] }
thiserror = "1.0.64"
hdf5 = { package = "hdf5-metno", version = "0.9.1" }
nalgebra = { version = "=0.33.2", default-features = false, features = ["alloc"] }
simba = { version = "0.9.0", default-features = false, features = ["std"] }
coredump = "0.1.2"
itertools = "0.14.0"
# hdf5-metno-sys = { version = "*", features = ["static"] }
