[package]
name = "storm"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true
lto = "thin"

[profile.test]
opt-level = 2

[profile.release-cleaned]
inherits = "release"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
color-eyre = "0.6.2"
ndarray = { version = "0.16", default-features = false }
num-traits = "0.2.19"
num-complex = "0.4.6"
clap = { version = "4.4.14", features = ["color", "derive", "wrap_help", "unstable-markdown"] }
thiserror = "1.0.64"
hdf5 = { package = "hdf5-metno", version = "0.10" }
nalgebra = { version = "=0.33.2", default-features = false, features = ["alloc"] }
simba = { version = "0.9.0", default-features = false, features = ["std"] }
itertools = "0.14.0"
nshare = { version = "0.10.0", features = ["nalgebra", "ndarray"], default-features = false }
shlex = "1.3.0"
rustyline = { version = "15.0.0", default-features = false }
iai-callgrind = "0.14.0"
tango-bench = "0.6.0"
hdf5-metno-sys = { version = "*", features = ["static"] }
clap-markdown = { version = "0.1.5", default-features = false }

[[bench]]
name = "instruction-count"
harness = false

[[bench]]
name = "wall-clock"
harness = false
